# birthday_reminder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
src/birthday_reminder/: __init__.py  __main__.py  config.py
src/birthday_reminder/adapters/database/: __init__.py  converters.py  exception_mapper.py  main.py  uow.py
src/birthday_reminder/application/birthday_remind/: __init__.py  reader.py  repo.py
src/birthday_reminder/application/common/: __init__.py  exceptions.py  uow.py
src/birthday_reminder/application/completed_birthday_remind/: __init__.py  reader.py  repo.py
src/birthday_reminder/application/scheduler/: __init__.py  nearest_birthday_reminders.py
src/birthday_reminder/application/user/: __init__.py  reader.py  repo.py
src/birthday_reminder/dialogs/: __init__.py  create_reming.py  start.py  states.py
src/birthday_reminder/domain/birthday_remind/: entities.py  exceptions.py
src/birthday_reminder/domain/common/: exceptions.py
src/birthday_reminder/domain/completed_birthday_remind/: entities.py  exceptions.py
src/birthday_reminder/domain/user/: entities.py  exceptions.py
src/birthday_reminder/handlers/: __init__.py  start.py
src/birthday_reminder/locales/en/: main.ftl
src/birthday_reminder/locales/ru/: main.ftl
src/birthday_reminder/presentation/dialogs/: __init__.py  common.py  create_remind.py  create_reming.py  delete_remind.py  main_menu.py  select_language.py  show_reminders.py  states.py
(+53 files in other folders)
