[project]
name = "birthday_reminder"
version = "0.0.1"
authors = [
    { name = "Desiders" }
]
description = "Telegram bot to remind you of friends' birthdays"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram-dialog~=2.1",
    "aiogram==3.*",
    "typing-extensions~=4.9",
    "structlog~=24.1",
    "SQLAlchemy~=2.0",
    "uuid6>=2024.1",
    "asyncpg>=0.29,<1",
    "alembic~=1.13",
]

[project.urls]
"Homepage" = "https://github.com/Desiders/birthday_reminder"
"Bug Tracker" = "https://github.com/Desiders/birthday_reminder/issues"

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "ruff",
]
dev = [
    "pre-commit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 79
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
extend-select = ["I"]
pydocstyle = { convention = "google" }

[tool.ruff.format]
line-ending = "lf"
